--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0E1C36"
     tools:context=".CreateAccountActivity">
 
     <TextView
@@ -17,6 +18,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="TestCore | "
+        android:textColor="#FAFFFD"
         android:textAlignment="center"
         android:textSize="50dp"
         android:textStyle="bold"
@@ -38,6 +40,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Test making made easy"
+        android:textColor="#FAFFFD"
         android:textAlignment="center"
         android:textSize="40dp"
         android:textStyle="bold"
@@ -69,6 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Create New Account"
+        android:textColor="#FAFFFD"
         android:textAlignment="center"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +90,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:hint="Enter Name"
+        android:textColorHint="#FAFFFD"
+        android:textColor="#FAFFFD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,6 +108,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:hint="Enter Email"
+        android:textColorHint="#FAFFFD"
+        android:textColor="#FAFFFD"
         app:layout_constraintBottom_toTopOf="@+id/create_account_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -121,6 +129,8 @@
         android:layout_marginBottom="552dp"
         android:ems="10"
         android:hint="Enter Password"
+        android:textColorHint="#FAFFFD"
+        android:textColor="#FAFFFD"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,12 +144,12 @@
         android:layout_width="364dp"
         android:layout_height="72dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="248dp"
         android:hint="Enter State"
+        android:textColor="#FAFFFD"
+        android:textColorHint="#FAFFFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -158,6 +168,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="336dp"
         android:hint="Enter Grade Level"
+        android:textColorHint="#FAFFFD"
+        android:textColor="#FAFFFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -176,6 +188,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="260dp"
         android:hint="Enter Content"
+        android:textColorHint="#FAFFFD"
+        android:textColor="#FAFFFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -195,11 +209,29 @@
         android:layout_marginBottom="152dp"
         android:text="Create Account"
         android:textSize="30dp"
+        android:textColor="#FAFFFD"
+        android:background="#3C91E6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_account_content"
         app:layout_constraintVertical_bias="0.201" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="282dp"
+        android:layout_height="271dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="272dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintStart_toEndOf="@+id/create_account_password"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
+        app:layout_constraintVertical_bias="0.0"
+        android:src="@drawable/owl_teaching" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
