--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0E1C36"
     tools:context=".DashboardActivity">
 
 
@@ -18,6 +19,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="TestCore | "
+        android:textColor="#FAFFFD"
         android:textAlignment="center"
         android:textSize="50dp"
         android:textStyle="bold"
@@ -39,6 +41,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Test making made easy"
+        android:textColor="#FAFFFD"
         android:textAlignment="center"
         android:textSize="40dp"
         android:textStyle="bold"
@@ -71,6 +74,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="72dp"
         android:text="Log Out"
+        android:textColor="#FAFFFD"
+        android:background="#3C91E6"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/horizontal_line"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,19 +89,19 @@
         android:layout_width="856dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Welcome, "
         android:textAlignment="center"
+        android:textColor="#FAFFFD"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/horizontal_line"
-        app:layout_constraintVertical_bias="0.082" />
+        app:layout_constraintVertical_bias="0.063" />
 
     <Button
         android:id="@+id/back_button"
@@ -116,98 +121,98 @@
         app:layout_constraintTop_toBottomOf="@+id/welcome_message"
         app:layout_constraintVertical_bias="0.934" />
 
+    <TextView
+        android:id="@+id/view_courses_explain"
+        android:layout_width="344dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="8dp"
+        android:text="Create tests or questions by viewing courses below!"
+        android:textAlignment="center"
+        android:textColor="#FAFFFD"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/view_courses"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
+        app:layout_constraintVertical_bias="0.459" />
+
     <Button
         android:id="@+id/view_courses"
-        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="336dp"
         android:layout_height="59dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:background="#3C91E6"
         android:text="View Courses"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_all_tests"
+        android:textColor="#FAFFFD"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.229"
+        app:layout_constraintHorizontal_bias="0.861"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
-        app:layout_constraintVertical_bias="0.813" />
+        app:layout_constraintTop_toBottomOf="@+id/view_courses_explain" />
 
     <!--Create a button for each course -->
 
-    <Button
-        android:id="@+id/view_all_tests"
-        android:layout_width="343dp"
-        android:layout_height="50dp"
+    <TextView
+        android:id="@+id/or"
+        android:layout_width="307dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
-        android:text="View All Tests"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/create_new_test"
+        android:layout_marginBottom="65dp"
+        android:text="OR"
+        android:textAlignment="center"
+        android:textColor="#FAFFFD"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/view_all_tests"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintHorizontal_bias="0.818"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
+        app:layout_constraintTop_toBottomOf="@+id/view_courses"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/create_new_test"
-        android:layout_width="343dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/view_all_tests"
+        android:layout_width="325dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="480dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="396dp"
-        android:text="Create New Test"
-        android:textSize="20dp"
+        android:layout_marginBottom="284dp"
+        android:background="#3C91E6"
+        android:text="View All Tests"
+        android:textColor="#FAFFFD"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.237"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_all_tests"
+        app:layout_constraintTop_toBottomOf="@+id/or"
         app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/create_new_question"
-        android:layout_width="343dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="60dp"
-        android:text="Create New Question"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.237"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_new_test"
-        app:layout_constraintVertical_bias="0.062" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="222dp"
         android:layout_height="180dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="352dp"
+        android:src="@drawable/owl_teaching"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcome_message"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintVertical_bias="0.215" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
