--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0E1C36"
+    android:background="#D2AB99"
     tools:context=".MainActivity">
 
     <TextView
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="10dp"
         android:layout_marginBottom="8dp"
-        android:background="#FA824C"
+        android:background="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16"
@@ -70,10 +70,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="812dp"
+        android:layout_marginBottom="752dp"
         android:text="Make test-making easy with TestCore! Organize your test questions by standards with just a few clicks!"
         android:textAlignment="center"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="25sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -158,7 +158,7 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="212dp"
-        android:background="#3C91E6"
+        android:background="#BDBEA9"
         android:text="Sign In"
         android:textColor="#FAFFFD"
         android:textSize="20sp"
@@ -176,7 +176,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="640dp"
-        android:background="#3C91E6"
+        android:background="#BDBEA9"
         android:text="Create Account"
         android:textColor="#FAFFFD"
         android:textSize="20sp"
