--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D2AB99"
+    android:background="#9dc183"
     tools:context=".MainActivity">
 
     <TextView
@@ -18,8 +18,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="TestCore | "
-        android:textColor="#FAFFFD"
         android:textAlignment="center"
+        android:textColor="#FAFFFD"
         android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,8 +40,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Test making made easy"
-        android:textColor="#FAFFFD"
         android:textAlignment="center"
+        android:textColor="#FAFFFD"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -140,9 +140,9 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Enter Password"
+        android:inputType="textPassword"
         android:textColor="#FAFFFD"
         android:textColorHint="#FAFFFD"
-        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.995"
