changed name of files to view edit tests

--- a/app/src/main/res/layout/activity_view_edit_tests.xml
+++ b/app/src/main/res/layout/activity_view_edit_tests.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D2AB99"
-    tools:context=".ViewStandardsActivity">
+    tools:context=".ViewEditTestsActivity">
 
     <Button
         android:id="@+id/display_standards_button"
