--- a/app/src/main/res/layout/activity_create_test.xml
+++ b/app/src/main/res/layout/activity_create_test.xml
@@ -4,119 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D2AB99"
     tools:context=".CreateTestActivity">
 
-    <TextView
-        android:id="@+id/standard_info_text"
-        android:layout_width="843dp"
+    <EditText
+        android:id="@+id/test_title"
+        android:layout_width="324dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginBottom="175dp"
+        android:hint="Title Your Test"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/view_standard_header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/title_submit_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Standard Info Goes Here"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Submit Title"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.056" />
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toEndOf="@+id/test_title"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="859dp"
-        android:layout_height="538dp"
+        android:id="@+id/standard_recycler_view"
+        android:layout_width="793dp"
+        android:layout_height="841dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/view_standard_header"
+        android:layout_width="432dp"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="15dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        android:text="Choose Standard"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/standard_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/standard_info_text"
-        app:layout_constraintVertical_bias="0.472"
-        android:background="#FFFFF0">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="7dp"
-            android:background="#FFFFF0"
-            android:padding="4dp">
-
-            <TextView
-                android:id="@+id/create_question_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Create Question"
-                android:textAlignment="center" />
-
-            <ImageButton
-                android:id="@+id/plus_icon_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/create_question_title"
-                android:src="@drawable/plus_icon" />
-
-            <EditText
-                android:id="@+id/question_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/create_question_title"
-                android:layout_toEndOf="@id/plus_icon_button"
-                android:hint="Question Text" />
-
-            <EditText
-                android:id="@+id/answer_choice_a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/question_text"
-                android:layout_toEndOf="@id/plus_icon_button"
-                android:hint="Answer Choice Text" />
-
-            <EditText
-                android:id="@+id/answer_choice_b"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/answer_choice_a"
-                android:layout_toEndOf="@id/plus_icon_button"
-                android:hint="Answer Choice Text" />
-
-            <EditText
-                android:id="@+id/answer_choice_c"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/answer_choice_b"
-                android:layout_toEndOf="@id/plus_icon_button"
-                android:hint="Answer Choice Text" />
-
-            <EditText
-                android:id="@+id/answer_choice_d"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/answer_choice_c"
-                android:layout_toEndOf="@id/plus_icon_button"
-                android:hint="Answer Choice Text" />
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
